# rtv-lickometer

./: .gitignore  README.md
rtv-lickometer-network/: d3d_network.py  extract_frames.py  network_test.py  network_training.py  run_training.sh  tensorboard_notebook.ipynb  test.py
rtv-lickometer-training/: Cargo.toml
rtv-lickometer-training/src/: record.rs
rtv-lickometer-training/src/app/: style.rs
src/: app.rs  lib.rs  main.rs  record.rs
src/app/: style.rs
